--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,6 +3,6 @@
 What is a callback function?
 
 # Answer
-
+A callback function is a function thats called in another function as an argument.
 
 # Teacher Feedback
