--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -8,6 +8,6 @@ nums.forEach(printDouble());
 ```
 
 # Answer
-
+In the `nums.forEach` nothing is being passed in the function.
 
 # Teacher Feedback
