--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -2,6 +2,11 @@
 What is an "inline function"? Give an example with your definition.
 
 # Answer
-
+An inline function is basicslly an annonymous function that's assigned to a variable, for example:
+```js
+let variable = function(x, y) => {
+    console.log(x, y)
+}
+```
 
 # Teacher Feedback
