--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -2,6 +2,6 @@
 What is a Higher Order Function?
 
 # Answer
-
+A Higher Order Function is a function that uses a callback function within it.
 
 # Teacher Feedback
