--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -11,3 +11,11 @@ nums.forEach(printDouble());
 In the `nums.forEach` nothing is being passed in the function.
 
 # Teacher Feedback
+2/3.
+Almost! The callback function `(num) => console.log(num * 2);` is stored within the `printDouble` variable. So, to make this work, we can simply pass the `printDouble` variable by itself to the `nums.forEach()` method like so:
+
+```js
+const printDouble = (num) => console.log(num * 2);
+const nums = [1, 2, 3];
+nums.forEach(printDouble);
+```
